--- a/ReleaseManagement.Web/ReleaseManagement.Web/Web.config
+++ b/ReleaseManagement.Web/ReleaseManagement.Web/Web.config
@@ -71,7 +71,4 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings>
-  <add name="ReleaseManagementEntities" connectionString="metadata=res://*/ReleaseManagementModel.csdl|res://*/ReleaseManagementModel.ssdl|res://*/ReleaseManagementModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ReportingToolAutomation;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>
-</configuration>
+<connectionStrings><add name="ReleaseManagementEntities" connectionString="metadata=res://*/Models.ReleaseManagementModel.csdl|res://*/Models.ReleaseManagementModel.ssdl|res://*/Models.ReleaseManagementModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=ReportingToolAutomation;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
